<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DetailLangActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="8dp"
        android:orientation="vertical">

        <RelativeLayout
            android:id="@+id/rl_head_detail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginBottom="16dp">

            <ImageView
                android:id="@+id/img_item_photo"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:adjustViewBounds="true"
                android:scaleType="fitCenter"
                tools:src="@drawable/lang_javascript" />

            <TextView
                android:id="@+id/tv_item_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_toEndOf="@id/img_item_photo"
                android:layout_alignParentEnd="true"
                android:gravity="center_horizontal"
                android:text="@string/dummy_name_lang"
                android:textColor="@color/black"
                android:textSize="30sp"
                android:textStyle="bold" />

        </RelativeLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginBottom="8dp"
            android:background="@color/dark_blue_grey"
            android:textColor="@color/white"
            android:padding="8dp"
            android:text="@string/label_profil_bahasa"/>

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginBottom="16dp">

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp">

                <TextView
                    android:id="@+id/tv_label_designed_by"
                    style="@style/TextDet.Field"
                    android:text="@string/dirancang_oleh_field"/>

                <TextView
                    android:id="@+id/tv_designed_by"
                    style="@style/TextDet.Val"
                    tools:text="@tools:sample/full_names"/>

            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp">
                <TextView
                    android:id="@+id/tv_label_first_release"
                    style="@style/TextDet.Field"
                    android:text="@string/rilis_perdana_field"/>

                <TextView
                    android:id="@+id/tv_first_release"
                    style="@style/TextDet.Val"
                    tools:text="@tools:sample/full_names"/>
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp">
                <TextView
                    android:id="@+id/tv_label_stable_release"
                    style="@style/TextDet.Field"
                    android:text="@string/rilis_stabil_field"/>

                <TextView
                    android:id="@+id/tv_stable_release"
                    style="@style/TextDet.Val"
                    tools:text="@tools:sample/full_names"/>
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp">
                <TextView
                    android:id="@+id/tv_label_paradigm"
                    style="@style/TextDet.Field"
                    android:text="@string/paradigma_field"/>

                <TextView
                    android:id="@+id/tv_paradigm"
                    style="@style/TextDet.Val"
                    tools:text="@tools:sample/full_names"/>
            </TableRow>

        </TableLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginBottom="8dp"
            android:background="@color/dark_blue_grey"
            android:textColor="@color/white"
            android:padding="8dp"
            android:text="@string/label_deskripsi"/>
        
        <TextView
            android:id="@+id/tv_detail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginBottom="16dp"
            android:lineSpacingMultiplier="1"
            android:text="@tools:sample/lorem/random"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:background="@color/dark_blue_grey"
            android:textColor="@color/white"
            android:padding="8dp"
            android:text="@string/label_referensi"/>

        <TextView
            android:id="@+id/tv_reference"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginBottom="16dp"
            android:linksClickable="true"
            android:autoLink="web"
            android:text="@tools:sample/lorem"/>


    </LinearLayout>

</ScrollView>